re PR rtl-optimization/7189 (gcc -O2 -Wall does not print ``control reaches end of non-void function'' warning)

2003-03-10  Steven Bosscher  <s.bosscher@student.tudelft.nl>

	PR optimization/7189
	* toplev.c (rest_of_compilation):  Move
	check_function_return_warnings up to just after
	delete_unreachable_blocks.

From-SVN: r64076